--- a/src/index.css
+++ b/src/index.css
@@ -206,7 +206,8 @@
   footer {
     width: 100%;
     display: inline-block;
-    margin: 2em 0;
+    margin-top: 2em;
+    margin-bottom: -1rem;
     height: 50px;
     background-color: #999;
   }
