--- a/src/index.css
+++ b/src/index.css
@@ -199,6 +199,21 @@ div[contenteditable="true"]::before {
     font-size: medium;
 }
 
+.contentEdit {
+    padding: 10px;
+    color: gray.500;
+    resize: none;
+    font-size: 24px;
+    min-height: 50px;
+    overflow-y: auto;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
+}
+
 .bubble-menu {
     display: flex;
     width: 100% !important;
@@ -207,31 +222,41 @@ div[contenteditable="true"]::before {
     outline: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    padding: 6px 4px;
+    padding: 6px 6px;
+    gap: 3px;
+    overflow-x: auto;
 }
 
 .floating-menu {
     display: flex;
-    width: 100% !important;
+    width: 100%;
     background: white;
     border: none;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    padding: 6px 4px;
+    padding: 6px 6px;
+    gap: 3px;
+    overflow-x: auto;
+}
+
+.floating-menu::-webkit-scrollbar, .bubble-menu::-webkit-scrollbar {
+    display: none;
 }
 
 .floating-menu button, .bubble-menu button {
     background: none;
     border: none;
     cursor: pointer;
-    padding: 4px;
+    padding: 6px;
     margin: 0 2px;
+    font-size: 18px;
 }
 
 .floating-menu button:hover, .bubble-menu button:hover {
     background: #efefef;
     border-radius: 4px;
+    transition: all .2s ease-in-out;
 }
 
 .floating-menu button.is-active, .bubble-menu button.is-active {
@@ -293,6 +318,10 @@ div[contenteditable="true"]::before {
 
     .sphere1 {
         display: none;
+    }
+
+    .floating-menu {
+        width: 200px;
     }
 }
 
